--- a/style.css
+++ b/style.css
@@ -15,19 +15,19 @@
     color: var(--color-text) !important;
 }
 
-body, .home-enterprise-wrapper::before, .bg-gray-light, .bg-gray-dark, .auth-form-body, .bg-gray, .bg-white, .ajax-pagination-form .ajax-pagination-btn, .branch-name, .Box-header, .Box--overlay, .pinned-item-checkbox:checked + .pinned-item-name, .repohead.experiment-repo-nav, .SelectMenu-divider, .protip code, kbd, .Box-row, .Box-footer, .select-menu-divider, .select-menu-header, .MarketplaceBackground-buffer, main > .border-gray-light, .gh-header, .discussion-timeline-actions, .timeline-comment, .page-responsive .previewable-comment-form .comment-form-head.tabnav, .conversation-list-heading .inner, .flash, .pricing-matrix-column-tier, .project-header, .AvatarStack-body .avatar, .Label--gray, .range-editor, .compare-pr-placeholder, ul.comparison-list > li, .file-header, .CodeMirror-gutter.CodeMirror-linenumbers, .blob-num, .repo-file-upload-progress .repo-file-upload-meter, #options_bucket .Box, .boxed-group .heading, .boxed-group > h3, .access-form-wrapper, .js-repo-access-entry, .boxed-group-inner, .previewable-comment-form .comment-form-head.tabnav {
+body, .home-enterprise-wrapper::before, .bg-gray-light, .bg-gray-dark, .auth-form-body, .bg-gray, .bg-white, .ajax-pagination-form .ajax-pagination-btn, .branch-name, .Box-header, .Box--overlay, .pinned-item-checkbox:checked + .pinned-item-name, .repohead.experiment-repo-nav, .SelectMenu-divider, .protip code, kbd, .Box-row, .Box-footer, .select-menu-divider, .MarketplaceBackground-buffer, main > .border-gray-light, .gh-header, .discussion-timeline-actions, .timeline-comment, .page-responsive .previewable-comment-form .comment-form-head.tabnav, .conversation-list-heading .inner, .flash, .pricing-matrix-column-tier, .project-header, .AvatarStack-body .avatar, .Label--gray, .range-editor, .compare-pr-placeholder, ul.comparison-list > li, .file-header, .CodeMirror-gutter.CodeMirror-linenumbers, .blob-num, .repo-file-upload-progress .repo-file-upload-meter, #options_bucket .Box, .boxed-group .heading, .boxed-group > h3, .access-form-wrapper, .js-repo-access-entry, .boxed-group-inner, .previewable-comment-form .comment-form-head.tabnav {
     background-color: var(--color-background) !important;
 }
 .jumbotron-codelines {
     background: url(/images/modules/site/heroes/simple-codelines.svg), var(--color-background) !important;
 }
-header, .dropdown-menu, .user-profile-nav, .pinned-item-list-item, .discussion-item-icon, .user-profile-sticky-bar::after, .Popover-message, .SelectMenu-item, .social-count, .js-navigation-item, .commit-tease, #js-issues-toolbar, .SelectMenu-modal, .SelectMenu-list > .ws-normal, .pagination .disabled, .pagination .disabled:hover, .pagination .gap, .pagination .gap:hover, .pagination [aria-disabled="true"], .pagination [aria-disabled="true"]:hover, .pagination a, .pagination em, .pagination span, .select-menu-item, .select-menu-filters, .Box-body.comment-body, .comment-body, .thread-subscription-status, .TimelineItem-badge, .gh-header .gh-header-sticky.is-stuck + .gh-header-shadow, #projects-results, .wiki-custom-sidebar, .filter-bar, .js-selected-navigation-item.menu-item, .blankslate, .tint-box, .contrib-person > .Box, .capped-card-content, .Box-body, .Tile, .copyable-terminal, .menu-item, .SelectMenu-tab[aria-selected="true"], .SelectMenu-blankslate, .SelectMenu-loading, .SelectMenu-message, #readme > .Box-body, #package-results > div, .js-manifest-file-entry, .repository-content .Box, .autocomplete-results, .menu-heading {
+header, .dropdown-menu, .user-profile-nav, .pinned-item-list-item, .discussion-item-icon, .user-profile-sticky-bar::after, .Popover-message, .SelectMenu-item, .social-count, .js-navigation-item, .commit-tease, #js-issues-toolbar, .SelectMenu-modal, .SelectMenu-list > .ws-normal, .pagination .disabled, .pagination .disabled:hover, .pagination .gap, .pagination .gap:hover, .pagination [aria-disabled="true"], .pagination [aria-disabled="true"]:hover, .pagination a, .pagination em, .pagination span, .select-menu-item, .select-menu-filters, .Box-body.comment-body, .comment-body, .thread-subscription-status, .TimelineItem-badge, .gh-header .gh-header-sticky.is-stuck + .gh-header-shadow, #projects-results, .wiki-custom-sidebar, .filter-bar, .js-selected-navigation-item.menu-item, .blankslate, .tint-box, .contrib-person > .Box, .capped-card-content, .Box-body, .Tile, .copyable-terminal, .menu-item, .SelectMenu-tab[aria-selected="true"], .SelectMenu-blankslate, .SelectMenu-loading, .SelectMenu-message, #readme > .Box-body, #package-results > div, .js-manifest-file-entry, .repository-content .Box, .autocomplete-results, .menu-heading, .commit-group-title .octicon-git-commit, .select-menu-modal, .select-menu-header {
     background-color: var(--color-bar) !important;
 }
 .text-gray-dark, .text-gray-light, .link-gray-dark, .muted-link, .text-gray, .subnav-link.selected, .link-gray {
     color: var(--color-text) !important;
 }
-.form-group .form-control, .jump-to-suggestions-path, .form-control, .form-select, .subnav-item:focus, .subnav-item:hover, .tabnav-tab.selected, .tabnav-tab[aria-current], .tabnav-tab[aria-selected="true"], .filter-item:hover, .timeline-comment-header, .comment-reactions, .markdown-body .highlight pre, .markdown-body pre, .menu-item.selected, .menu-item[aria-current], .menu-item[aria-selected="true"], .table-list-header, .network .current-repository, .topic-tag, .bg-blue-light, .pricing-matrix-row:hover .pricing-matrix-row-text, .pricing-matrix-row:hover .pricing-matrix-column-feature, .project-column, table.files tr.navigation-focus td, table.files tr[aria-selected="true"] td, .SelectMenu-tab:not([aria-selected="true"]):hover, .tree-browser-result[aria-selected="true"], .CopyBlock:active, .CopyBlock:focus, .CopyBlock:hover {
+.form-group .form-control, .jump-to-suggestions-path, .form-control, .form-select, .subnav-item:focus, .subnav-item:hover, .tabnav-tab.selected, .tabnav-tab[aria-current], .tabnav-tab[aria-selected="true"], .filter-item:hover, .timeline-comment-header, .comment-reactions, .markdown-body .highlight pre, .markdown-body pre, .menu-item.selected, .menu-item[aria-current], .menu-item[aria-selected="true"], .table-list-header, .network .current-repository, .topic-tag, .bg-blue-light, .pricing-matrix-row:hover .pricing-matrix-row-text, .pricing-matrix-row:hover .pricing-matrix-column-feature, .project-column, table.files tr.navigation-focus td, table.files tr[aria-selected="true"] td, .SelectMenu-tab:not([aria-selected="true"]):hover, .tree-browser-result[aria-selected="true"], .CopyBlock:active, .CopyBlock:focus, .CopyBlock:hover, .ellipsis-expander, .hidden-text-expander a {
     background-color: var(--color-background-shadow) !important;
 }
 .form-group.errored .error * {
@@ -193,18 +193,19 @@ button[aria-label="Search"], button[aria-label="Search"]:hover {
     border-top: 1px solid #e1e4e8 !important;
 }
 
-.AvatarStack--right .avatar {
-    border-left: inherit !important;
-}
-
-.AvatarStack--right .AvatarStack-body:hover .avatar {
-    margin-left: 0 !important;
+.AvatarStack .AvatarStack--right, .profile-timeline-card > div > img {
+    display:none !important;
 }
 
 .js-calendar-graph-svg > g > g > rect[data-count='0'] {
     fill: var(--color-background-shadow) !important;
 }
 
+.profile-timeline-card-wrapper {
+    border-top: initial;
+    border-bottom: initial;
+}
+    
 .flash-messages {
     display:none;
 }
@@ -235,4 +236,7 @@ table.files tbody tr:first-child td {
 }
 .flash.flash-full.flash-notice {
     background-color: slategray !important;
+}
+.dropdown-menu::after, .dropdown-menu::before {
+    content: inherit;
 }
